(lang dune 3.14)

(name simple_circuits)

(generate_opam_files true)

(source
 (github benoitlx/simple-circuits))

(authors "Benoit Leroux")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name simple_circuits)
 (synopsis "Hardware description of simple circuits")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
